rsvp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-deployment
  labels:
    app: rsvp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp
  template:
    metadata:
      labels:
        app: rsvp
    spec:
      containers:
      - name: rsvpapp
        image: wipasp/rsvpapp
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rsvp
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: rsvp
