rsvp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rsvp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rsvp.example.com
    http:
      paths:
      - backend:
          serviceName: rsvp
          servicePort: 5000
